@@ -35,6 +35,7 @@
 * SumUp: Void and partial refund calls [sinourain] #4891
 * Rapyd: send customer object on us payment types [Heavyblade] #4919
 * SecurionPay/Shift4_v2: authorization from [gasb150] #4913
+* Rapyd: Update recurrence_type field [yunnydang] #4922
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
